--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API for elguide website",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha server/**/*.test.js",
+    "test-watch": "nodemon --exec 'npm test'"
   },
   "author": "Asem Saafan",
   "license": "ISC",
@@ -19,5 +20,13 @@
     "mocha": "^5.0.0",
     "nodemon": "^1.14.11",
     "supertest": "^3.0.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AsemSaafan/node-api.git"
+  },
+  "bugs": {
+    "url": "https://github.com/AsemSaafan/node-api/issues"
+  },
+  "homepage": "https://github.com/AsemSaafan/node-api#readme"
 }
