--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "start": "node server/server.js",
     "test": "mocha server/**/*.test.js",
-    "test-watch": "nodemon --exec 'npm test'"
-  },,
-  "engines": {
-    "node": "9.2.1"
+    // "test-watch": "nodemon --exec 'npm test'"
   }
+
+  ,
+  "engines": {
+    "node": "9.2.1",
+    "npm": "5.5.1"
+  },
   "author": "Asem Saafan",
   "license": "ISC",
   "dependencies": {
